# chill-out

./: .chill-out.yaml  .gitignore  404.html  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_NOTES.md  Makefile  README.md  SECURITY.md  TODO.md  index.html  objects.inv  pyproject.toml  search.json  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: deploy.yml  docs.yml  main.yml
api/: index.html
case-study/: index.html
cli/: index.html
comparison/: index.html
configuration/: index.html
docs/: mkdocs.yaml  pyproject.toml
docs/source/: api.md  case-study.md  cli.md  comparison.md  configuration.md  ecosystems.md  examples.md  github-actions.md  how-it-works.md  index.md  quickstart.md  reference.md  state-file.md
docs/source/stylesheets/: extra.css
ecosystems/: index.html
examples/: README.md  basic_example.py  cli_check.sh  custom_config.py  index.html  inspect_safe_versions.py  programmatic_npm.py  programmatic_pypi.py
examples/fixtures/shop-monorepo/: README.md
examples/live-projects/shop-monorepo/: README.md
examples/live-projects/shop-monorepo/api/: package.json
examples/npm-puzzle/: README.md  package.json
examples/npm-puzzle/child/: package.json
examples/npm-puzzle/web/: package.json
examples/npm-puzzle/worker/: package.json
examples/projects/npm-app/: .chill-out.yaml  README.md  package-lock.json  package.json  run_demo.py
examples/projects/python-app/: .chill-out.yaml  README.md  pyproject.toml  run_demo.py
examples/shop-monorepo/: README.md
github-actions/: index.html
how-it-works/: index.html
quickstart/: index.html
reference/: index.html
src/chill_out/: __init__.py  cache.py  config.py  constants.py  cooldown.py  exceptions.py  main.py  models.py  registry_client.py  render.py  reporting.py  runner.py
src/chill_out/cli/: main.py
src/chill_out/ecosystems/: __init__.py  backend.py  base.py  constants.py  detector.py  npm.py  pypi.py  registry.py  retry.py  version_parsing.py
src/chill_out/ecosystems/npm/: __init__.py  backend.py  detector.py  schemas.py
src/chill_out/ecosystems/pypi/: __init__.py  backend.py  detector.py  schemas.py
src/chill_out/state/: __init__.py  constants.py  exceptions.py  models.py  schema.py
src/chill_out_demo/: __init__.py  basic.py  helpers.py  main.py  npm.py  pypi.py
state-file/: index.html
stylesheets/: extra.css
tests/: conftest.py
tests/bdd/: conftest.py  test_check_steps.py  test_fix_steps.py
tests/bdd/features/: check.feature  fix.feature
tests/integration/: cli.feature  conftest.py  test_cli_integration.py
tests/unit/: test_cache.py  test_cli.py  test_config.py  test_constants.py  test_cooldown.py  test_ecosystems.py  test_exceptions.py  test_npm.py  test_pypi.py  test_registry_client.py  test_render.py  test_reporting.py  test_runner.py  test_version.py
tests/unit/cli/: test_main.py
tests/unit/ecosystems/: conftest.py  test_registry.py  test_retry.py
tests/unit/ecosystems/npm/: test_backend.py  test_detector.py  test_schemas.py
tests/unit/ecosystems/pypi/: test_backend.py  test_detector.py  test_schemas.py
tests/unit/state/: test_models.py  test_schema.py
